--- a/index.html
+++ b/index.html
@@ -334,6 +334,18 @@
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 9998;
         }
+        
+        /* Debug button styling */
+        .debug-button {
+            background-color: #ff9800;
+            color: white;
+            padding: 10px 15px;
+            font-size: 0.9rem;
+        }
+        
+        .debug-button:hover {
+            background-color: #f57c00;
+        }
     </style>
 </head>
 <body>
